--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^5.1.0",
+    "express-async-handler": "^1.2.0",
     "firebase-admin": "^13.4.0"
   },
   "devDependencies": {
