--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "celebrate": "^15.0.3",
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
     "firebase-admin": "^13.4.0"
